--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
 <body>
     <main class="conteudo">
-        <h1 class="titulo">faça sua escolha</h1>
+        <h1 class="titulo">Faça sua escolha</h1>
         <nav class="botoes">
             <a href="lado-claro.html"class=botao-claro>Light side</a>
-            <a href="lado-sobrio.html"class=botao-escuro>Dark side</a>
+            <a href="lado-sombrio.html"class=botao-escuro>Dark side</a>
         </nav>
+        <a href="saiba-mais.html"class="voltar">saiba-mais</a>
     </main>
 
     <script src="app.js"></script>
